# gmail-autopilot

./: .env.example  .gitignore  README.md  pyproject.toml
courier/: api.py  cli.py  cli_review.py  cli_ui.py  config.py  models.py  priority.py
courier/adapters/: gmail_mock.py  gmail_real.py  llm_fake.py  llm_grok.py  llm_openai.py  memory_null.py
courier/engine/: events.py  runner.py
courier/reliability/: logger.py  retry.py
courier/state/: repository.py  schema.sql
courier/tools/: create_draft.py  generate_draft.py  read_thread.py  score_relationship_signal.py
courier/workflows/: autopilot_inbox.py
gmail_autopilot/: api.py  cli.py  cli_review.py  cli_ui.py  config.py  errors.py  models.py
gmail_autopilot/adapters/: gmail_base.py  gmail_mock.py  gmail_real.py  llm_anthropic.py  llm_base.py  llm_openai.py  llm_routed.py  memory_base.py
gmail_autopilot/engine/: runner.py  step.py
gmail_autopilot/fixtures/: mock_inbox.json
gmail_autopilot/reliability/: idempotency.py
gmail_autopilot/state/: repository.py
gmail_autopilot/tools/: base.py  generate_draft.py  list_recent_emails.py  score_relationship_signal.py
tests/: conftest.py  test_branching.py  test_dry_run.py  test_failure_handling.py  test_idempotency.py  test_priority.py  test_routing.py  test_update_draft.py
